--- a/index.html
+++ b/index.html
@@ -2,18 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GridByExample</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/icons/css/all.min.css">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/icons/css/all.min.css" />
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
 </head>
 
-<body class="bg-primary">
-    <i class="fa-brands fa-twitter"></i>
-
+<body>
+    <header>
+        <div class="about">
+            <h1><a href="index.html">Grid By Example</a> </h1>
+            <p>Everything you need to learn CSS Grid Layout</p>
+        </div>
+        <div class="follow"><a href="#"><i class="fa-brands fa-twitter"></i> Follow @rachelandrew</div></a>
+    </header>
 </body>
 
 </html>
