--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
             <p>Everything you need to learn CSS Grid Layout</p>
         </div>
         <div class="follow"><a href="#"><i class="fa-brands fa-twitter"></i> Follow @rachelandrew</div></a>
+        <nav class="bg-secondary-subtle">
+            <ul class="d-flex justify-content-between">
+                <li><a href="#">Start Here</a></li>
+                <li><a href="#">Examples</a></li>
+                <li><a href="#">Patterns</a></li>
+                <li><a href="#">Video Tutorial</a></li>
+                <li><a href="#">Resources</a></li>
+            </ul>
+        </nav>
     </header>
 </body>
 
