--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1><a href="index.html">Grid By Example</a> </h1>
             <p>Everything you need to learn CSS Grid Layout</p>
         </div>
-        <div class="follow"><a href="#"><i class="fa-brands fa-twitter"></i> Follow @rachelandrew</div></a>
+        <div class="follow"><a href="#"><i class="fa-brands fa-twitter"></i> Follow @rachelandrew</a></div>
         <nav class="bg-secondary-subtle">
             <ul class="d-flex justify-content-between">
                 <li><a href="#">Start Here</a></li>
@@ -27,6 +27,80 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <div class="row pt-5">
+            <div class="layout col-8">
+                <h1>CSS Grid Layout</h1>
+                <p>This site is a collection of examples, video and other information to help you learn CSS Grid Layout.
+                    Developed and maintained by <a href="#">Rachel Andrew</a>.</p>
+            </div>
+            <div class="tutorial col-3 offset-1">
+                <a href="#">
+                    <h2>The Video Tutorial</h2>
+                    <p>A collection of short and to the point videos, demonstrating various parts of the CSS Grid Layout
+                        specification.</p>
+                </a>
+            </div>
+            <div class="guide col-12 mt-4 ">
+                <a href="#">
+                    <h2>Get Started Guide</h2>
+                    <p>A structured guide to resources that will help you to start learning CSS Grid Layout.</p>
+                </a>
+            </div>
+            <div class="examples col-4 mt-4">
+                <div class="flag d-flex justify-content-center align-items-center">New!</div>
+                <a href="#">
+                    <h2>The Examples</h2>
+                    <p>Small examples of the CSS Grid Layout specification. Each demonstrates a feature of the
+                        specification. Includes new Subgrid examples!</p>
+                </a>
+            </div>
+            <div class="patterns col-7 offset-1 mt-4">
+                <a href="#">
+                    <h2>Patterns</h2>
+                    <p>Grab & Go. A set of example patterns with fallbacks for older browsers.</p>
+                </a>
+            </div>
+            <div class="resources col-8 mt-4">
+                <a href="#">
+                    <h2>Resources</h2>
+                    <p>More links to articles, tutorials and conference presentations that will help you learn CSS Grid
+                        Layout.</p>
+                </a>
+            </div>
+            <div class="layout-news col-3 offset-1 mt-4">
+                <a href="#">
+                    <h2>CSS Layout News</h2>
+                    <p>Sign up for a weekly email full of CSS Layout links and resources.</p>
+                </a>
+            </div>
+            <div class="questions col-4 mt-4">
+                <a href="#">
+                    <h2>Questions?</h2>
+                    <p> Ask me anything about Grid Layout over at my GitHub Grid AMA.</p>
+                </a>
+            </div>
+            <div class="css-grid col-3 offset-1 mt-4">
+                <a href="#">
+                    <h2>About CSS Grid</h2>
+                    <p>What even is this? Do I need to care?</p>
+                </a>
+            </div>
+            <div class="news col-3 offset-1 mt-4">
+                <a href="#">
+                    <h2>News</h2>
+                    <p>Infrequent updates on this site.</p>
+                </a>
+            </div>
+            <div class="bugs col-12 mt-4">
+                <a href="#">
+                    <h2>GridBugs!</h2>
+                    <p>If you have found a bug in a browser, or want to see what we have found so far, check out this
+                        site.</p>
+                </a>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
