--- a/index.html
+++ b/index.html
@@ -101,6 +101,21 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div>
+            <p>This is a project by Rachel Andrew. Take a look at some of the other things I make.</p>
+            <ul>
+                <li><a href="#">Perch CMS</a> - the original Really Little CMS. Designed for speed and simple
+                    implementation.
+                </li>
+                <li><a href="#">Notist</a> - slide sharing and much more. Create your public speaking portfolio.</li>
+                <li><a href="#">The CSS Workshop</a> - learn CSS Layout with me</li>
+            </ul>
+            <p>This site is hosted on <a href="#">Netlify</a>, thanks to their free hosting for open source projects.
+            </p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
